<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encabezadoActivity1"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textColor="#333"
    />

    <ImageView
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textAlignment="center"
        android:src="@drawable/iscicon"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText1"
        android:id="@+id/editText1"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText3"
        android:id="@+id/editText3"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView4"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText4"
        android:id="@+id/editText4"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:textColor="#333"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:backgroundTint="#28B463"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:backgroundTint="#333"
        />

</LinearLayout>